[metadata]
name = fleet2d
version = 1.0
description = Fleet2D
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
exclude =
    test

[options.entry_points]

[tool:pytest]
xfail_strict = true
addopts =
    --verbose
    --ignore=build/private
    --cov f2d
    --cov-report term-missing
    # show the slowest 5 tests at the end
    --durations=5
    # Default to colorful output
    --color=yes
    # Uncomment to enforce a minimum code coverage threshold.
    # --cov-fail-under 50
testpaths = test
looponfailroots = src test

[coverage:run]
branch = true
parallel = true

[coverage:paths]
source =
    src/
    build/lib/*/site-packages/

# Code formatting configuration.
[flake8]
ignore =
    # Not pep8, black adds whitespace before ':'
    E203,
    # Not pep8, black adds line break before binary operator
    W503,
    # Once `bb format` is done with things, the only remaining long lines do not
    # matter; we can ignore them.
    E501,
max_line_length = 100
